document-cache/document-cache-stack.yaml
apiVersion: v1
kind: Service
metadata:
  name: dgraph-test
  namespace: document-cache
  labels:
    app: dgraph-test
spec:
  type: ClusterIP
  ports:
  - port: 5080
    targetPort: 5080
    name: grpc-zero
  - port: 6080
    targetPort: 6080
    name: http-zero
  - port: 8080
    targetPort: 8080
    name: http-alpha
  - port: 9080
    targetPort: 9080
    name: grpc-alpha
  - port: 8000
    targetPort: 8000
    name: http-ratel
  selector:
    app: dgraph-test
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dgraph-test
  namespace: document-cache
spec:
  serviceName: dgraph-test
  replicas: 1
  selector:
      matchLabels:
        app: dgraph-test
  template:
    metadata:
      labels:
        app: dgraph-test
    spec:
      containers:
      - name: ratel
        image: dgraph/dgraph:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
          name: http-ratel
        command:
          - dgraph-ratel
      - name: zero
        image: dgraph/dgraph:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5080
          name: grpc-zero
        - containerPort: 6080
          name: http-zero
        volumeMounts:
        - name: datadir
          mountPath: /dgraph
        command:
          - bash
          - "-c"
          - |
            set -ex
            dgraph zero --my=$(hostname -f):5080
      - name: alpha
        image: dgraph/dgraph:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http-alpha
        - containerPort: 9080
          name: grpc-alpha
        volumeMounts:
        - name: datadir
          mountPath: /dgraph
        command:
          - bash
          - "-c"
          - |
            set -ex
            dgraph alpha --my=$(hostname -f):7080 --zero dgraph-0.dgraph.${POD_NAMESPACE}.svc.cluster.local:5080
      terminationGracePeriodSeconds: 60
      volumes:
      - name: datadir
        persistentVolumeClaim:
          claimName: datadir
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
  - metadata:
      name: datadir
      annotations:
        volume.alpha.kubernetes.io/storage-class: anything
    spec:
      accessModes:
        - "ReadWriteOnce"
      resources:
        requests:
          storage: 5Gi
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dgraph-ingress-test
  namespace: document-cache
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - ratel-test.tekit.io
    secretName: dgraph-test-tekit-com-tls
  rules:
  - host: ratel-test.tekit.io
    http:
      paths:
      - backend:
          serviceName: dgraph-test-dgraph-ratel
          servicePort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: document-cache
  name: document-cache-test
  labels: 
    app: document-cache-test
spec:
  selector:
    matchLabels:
      app: document-cache-test
  replicas: 1
  template:
    metadata:
      labels:
        app: document-cache-test
    spec:
      containers:
        - name: hypha-doc-cache-testnet
          image: sebastianmontero/hypha-doc-cache-testnet:latest
          command: ["node"]
          args: ["src/start.js"]
---
apiVersion: v1
kind: Service
metadata:
  name: document-cache-prom-service-test
  labels:
    app: document-cache-test
spec:
  type: NodePort
  selector:
    app: document-cache-test
  ports:
  - name: prom
    port: 9090
    targetPort: 9090
    protocol: TCP
